Fix: calendar month in left menu was invisible in darkroom mode

--- a/pub/css/darkroom.css
+++ b/pub/css/darkroom.css
@@ -13,7 +13,7 @@ CSS information
 	color: #fff;
 }
 
-.darkroom a {
+.darkroom #content a {
 	color: #fff;
 }
 
